# Between_Plus_and_Minus

./: CMakeLists.txt  README.md
src/: main.cpp
src/agents/: IAgent.h  RandomAgent.cpp  RandomAgent.h
src/core/: Actions.h  GameState.cpp  GameState.h  Resolver.cpp  Resolver.h  Rules.cpp  Rules.h  Types.h
src/core/cli/: CliArgs.cpp  CliArgs.h  Clihelpers.cpp  Clihelpers.h
src/sim/: RunGame.cpp  RunGame.h  modes.cpp  modes.h
